[tool.poetry]
name = "iframe-fastapi"
version = "0.1.0"
description = "Simple FastAPI app that serves a single page embedding an external site in an iframe"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"